[gd_scene load_steps=6 format=3 uid="uid://cpxevcg27leys"]

[ext_resource type="Script" path="res://scenes/gui/health_bar.gd" id="1_pxwow"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hsmp5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ofll0"]
bg_color = Color(0.960784, 0.392157, 0.266667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqjeu"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uaxxw"]
bg_color = Color(1, 1, 1, 1)

[node name="HealthBar" type="ProgressBar"]
z_index = 1
offset_right = 240.0
offset_bottom = 4.0
theme_override_styles/background = SubResource("StyleBoxEmpty_hsmp5")
theme_override_styles/fill = SubResource("StyleBoxFlat_ofll0")
value = 60.0
show_percentage = false
script = ExtResource("1_pxwow")

[node name="DamageBar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_wqjeu")
theme_override_styles/fill = SubResource("StyleBoxFlat_uaxxw")
value = 80.0
show_percentage = false

[node name="DamageDelayTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="DamageDelayTimer" to="." method="_on_damage_delay_timer_timeout"]
